[package]
name = "transcoder-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
transcoder = { path = "../transcoder", features = ["wasm", "serde"] }

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.69", features = ["console", "Worker"] }
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.201", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
